tests/bad/value_enums/different_field_in_branch.oc
/// fail: All conditions in this branch must have the same fields

enum Foo {
    Case0(i32)
    Case1(str, i32)
    Case2(str)
    Case3
}

def main() {
    let foo: Foo = Case1("hello", 42)
    match foo {
        Case0(x) | Case1(a, b) => println(`0|1 => {x}`)
        Case2(y) => println(`2 => {y}`)
        Case3 => println(`3 => ()`)
    }
}